<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorMain">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:text="@string/product_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_product_details_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/product_image"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/item_details_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_title"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_number"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="16dp"
                android:text="@string/product_description"
                android:textColor="@color/item_value_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_description_details"
                android:textColor="@color/queryTextColor"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_product_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/stock_quantity"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_bg"
                    android:paddingStart="16dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="5dp"
                    android:text="@string/stock_quantity_number"
                    android:textColor="@color/queryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--      <Button
                      android:id="@+id/btn_add_to_cart"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:layout_marginTop="30dp"
                      android:layout_marginEnd="16dp"
                      android:layout_marginBottom="20dp"
                      android:background="@drawable/button_bg"
                      android:gravity="center"
                      android:paddingTop="8dp"
                      android:paddingBottom="8dp"
                      android:text="@string/add_to_cart"
                      android:textColor="@android:color/white"
                      android:textSize="18sp"
                      android:visibility="visible" />
                  &lt;!&ndash;  android:visibility="gone"
                    tools:visibility="visible"
                      android:foreground="?attr/selectableItemBackground" &ndash;&gt;

                  <Button
                      android:id="@+id/btn_go_to_cart"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:layout_marginTop="30dp"
                      android:layout_marginEnd="16dp"
                      android:layout_marginBottom="20dp"
                      android:background="@drawable/button_bg"
                      android:gravity="center"
                      android:paddingTop="8dp"
                      android:paddingBottom="8dp"
                      android:text="@string/go_to_cart"
                      android:textColor="@android:color/white"
                      android:textSize="18sp"
                      android:visibility="visible" />-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>